Fix: Dark mode si salva nel localStorage

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
 }
 
 .dark-mode {
+    --dark-mode-background: #131b24;
     --background-color: #233142;
     --primary: #455d7a32;
     --secondary: 85, 113, 148;
@@ -37,7 +38,7 @@ body {
     height: 100vh;
     font-family: 'Roboto', sans-serif;
     user-select: none;
-    background-color: var(--background-color);
+    background-color: var(--dark-mode-background);
     transition: background-color 0.4s ease-in-out;
 }
 
@@ -121,6 +122,7 @@ body {
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
     transition: background-color 0.4s ease, transform 0.4s ease;
     transform: translateX(-210px);
+    background-color: var(--background-color);
 }
 
 .settings-container:not(.settings-expanded):hover{
